--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,15 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #2e8558;
+  --ifm-color-primary-dark: #29784f;
+  --ifm-color-primary-darker: #27714b;
+  --ifm-color-primary-darkest: #205d3e;
+  --ifm-color-primary-light: #339261;
+  --ifm-color-primary-lighter: #359965;
+  --ifm-color-primary-lightest: #3cad72;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
