--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1,8 +1,3 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
 
 /* You can override the default Infima variables here. */
 :root {
@@ -25,4 +20,22 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+
+@font-face {
+  font-family: "Megrim";
+  src: url("/font/Megrim-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.navbar__brand {
+  font-family: "Megrim", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.hero__title {
+  font-family: "Megrim", sans-serif;
 }
